--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -1,6 +1,7 @@
 body {
     background-color: #000000;
-    overflow: hidden;
+    overflow:hidden;
+    
 }
 
 main::after {
@@ -27,6 +28,7 @@ main .personagem .imagem {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    
 }
 
 .conteudo {
@@ -68,27 +70,32 @@ main .personagem .imagem {
     top: 0;
     right: 0;
     display: flex;
-    flex-direction: column;
+    flex-direction:column;
     min-height: 100vh;
     width: 180px;
-    justify-content: center;
-    align-items: center;
-    gap: 2px;
+    justify-content:center;
+    align-items:center;
+    column-gap:0px;
     background-color: rgba(0, 0, 0, 0.3);
+    overflow-y: auto;
+    
 }
+
 
 .botoes .botao {
     border: none;
-    background: #000000;
+    background: black;
     cursor: pointer;
     border-radius: 50%;
 }
 
 .botoes .botao img {
     border-radius: 50%;
+    
 }
 
 .botoes .botao.selecionado {
     transform: scale(1.2);
     box-shadow: 0 0 10px #D9D9D9;
 }
+
