--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -77,10 +77,9 @@ main .personagem .imagem {
     align-items:center;
     column-gap:0px;
     background-color: rgba(0, 0, 0, 0.3);
-    overflow-y: auto;
-    
+    overflow-y:scroll;
+        
 }
-
 
 .botoes .botao {
     border: none;
