--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -62,7 +62,9 @@ main .personagem .imagem {
     background-size: cover;
     height: 100px;
     width: 230px;
-    margin-bottom: 35px;
+    margin-bottom: 500px;
+    position:fixed;
+    
 }
 
 
@@ -78,8 +80,8 @@ main .personagem .imagem {
     align-items:center;
     gap:1px;
     background-color: rgba(0, 0, 0, 0.3);
-                  
-            
+      
+    
 }
 
 .botoes .botao {
@@ -87,7 +89,7 @@ main .personagem .imagem {
     background: black;
     cursor: pointer;
     border-radius: 50%;
-    
+    opacity: 0.8;
 }
 
 .botoes .botao img {
@@ -98,5 +100,6 @@ main .personagem .imagem {
 .botoes .botao.selecionado {
     transform: scale(1.2);
     box-shadow: 0 0 10px #D9D9D9;
+    opacity:1;
 }
 
