--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -62,8 +62,7 @@ main .personagem .imagem {
     background-size: cover;
     height: 100px;
     width: 230px;
-    margin: 25px 50px 400px;
-    position:fixed;
+    position:auto;
     
 }
 
